@@ -32,8 +32,6 @@ static inline MagickBooleanType SetImageProgress(const Image *image,
 
   if (image->progress_monitor == (MagickProgressMonitor) NULL)
     return(MagickTrue);
-  if (QuantumTick(offset,extent) == MagickFalse)
-    return(MagickTrue);
   (void) FormatMagickString(message,MaxTextExtent,"%s/%s",tag,image->filename);
   return(image->progress_monitor(message,offset,extent,image->client_data));
 }
